# debugfatfs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile.am  README.md  configure.ac
.github/: pull_request_template.md
.github/workflows/: build.yml  c-cpp.yml  coverage.yml  release.yml  test.yml
docs/: design_directory_chain.md  test_specification.md
include/: bitmap.h  debugfatfs.h  dumpexfat.h  list.h  list2.h  nls.h  shell.h
man/: dumpexfat.1
script/: bootstrap.sh  get_changelog.sh  verify_test_results.sh
src/: exfat.c  fat.c  main.c  nls.c  shell.c
tests/: 00_init.sh  01_simple_check_fat.sh  01_simple_option_check.sh  02_simple_check_exfat.sh  02_simple_inetractive_check.sh  03_simple_check_other.sh  03_simple_command_check.sh  03_simple_invalid_check.sh  04_simple_invalid_check.sh  05_show_dentry_check.sh  05_simple_filestat_check.sh  06_invalid_usage_check.sh  07_invalid_image_check.sh  11_alloc_free_check.sh  21_fat12_root_check.sh  22_fat_lfn_check.sh  Directory_contents.txt  common.sh
tests/sample/: exfat.tar.bz2  exfat.tar.xz  fat.tar.xz  fat12.tar.bz2  fat12.tar.xz  fat16.tar.bz2  fat16.tar.xz  fat32.tar.bz2  fat32.tar.xz  ntfs.tar.xz
tests/unit_test/: Makefile  test.c
